# discord-event-bot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  run.bat
.github/workflows/: cd.yml  ci.yml  release_name.bat
src/: main.rs
src/anilist/: graphql.rs  mod.rs  objects.rs
src/messages/: message_type.rs  mod.rs  torrent.rs  utils.rs
