[package]
name = "event-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
serenity = { version = "0.12.2", features = ["client", "gateway", "framework", "standard_framework"] }
tokio = { version = "1.38.0", features = [ "rt-multi-thread" ] }
